{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 427,
  "lineage": "71c6551a-acff-9b31-a1be-8bd372949d7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:security-group/sg-019104559b4e336a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.22.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-019104559b4e336a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211230235015524300000002",
            "name_prefix": "terraform-",
            "owner_id": "992293952919",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:security-group/sg-03265af8d82bd3723",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03265af8d82bd3723",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019104559b4e336a4"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20211230235027478500000003",
            "name_prefix": "terraform-",
            "owner_id": "992293952919",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_ecs_sg",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992293952919:loadbalancer/app/web-dev-lb/cec9619e680814cb",
            "arn_suffix": "app/web-dev-lb/cec9619e680814cb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-dev-lb-1717045398.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992293952919:loadbalancer/app/web-dev-lb/cec9619e680814cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-dev-lb",
            "security_groups": [
              "sg-019104559b4e336a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01dce5360997b1228"
              },
              {
                "subnet_id": "subnet-06149a0e188b1d97b"
              }
            ],
            "subnets": [
              "subnet-01dce5360997b1228",
              "subnet-06149a0e188b1d97b"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0d78b0645766eb87b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_ecs_sg",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992293952919:listener/app/web-dev-lb/cec9619e680814cb/3f931f0e2c02ce82",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992293952919:targetgroup/node-app-blue-dev-lb-tg/fca8f85519407fd4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992293952919:listener/app/web-dev-lb/cec9619e680814cb/3f931f0e2c02ce82",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992293952919:loadbalancer/app/web-dev-lb/cec9619e680814cb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.ecs_tg_blue.aws_lb_target_group.alb_tg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992293952919:targetgroup/web-dev-lb-tg/9b5d92fa02a279ca",
            "arn_suffix": "targetgroup/web-dev-lb-tg/9b5d92fa02a279ca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992293952919:targetgroup/web-dev-lb-tg/9b5d92fa02a279ca",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-dev-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_tg_blue",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992293952919:targetgroup/node-app-blue-dev-lb-tg/fca8f85519407fd4",
            "arn_suffix": "targetgroup/node-app-blue-dev-lb-tg/fca8f85519407fd4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992293952919:targetgroup/node-app-blue-dev-lb-tg/fca8f85519407fd4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "node-app-blue-dev-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_tg_green",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992293952919:targetgroup/node-app-green-dev-lb-tg/de2a82bfc7f19f57",
            "arn_suffix": "targetgroup/node-app-green-dev-lb-tg/de2a82bfc7f19f57",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992293952919:targetgroup/node-app-green-dev-lb-tg/de2a82bfc7f19f57",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "node-app-green-dev-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d1532f790812fdb",
            "association_id": "eipassoc-0372f6c6dfdd44d09",
            "domain": "vpc",
            "id": "eipalloc-06d1532f790812fdb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c69fdf1b932e0731",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-54-85-44-158.compute-1.amazonaws.com",
            "public_ip": "54.85.44.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:internet-gateway/igw-06841a50edd6b8561",
            "id": "igw-06841a50edd6b8561",
            "owner_id": "992293952919",
            "tags": {
              "Name": "igw-public"
            },
            "tags_all": {
              "Name": "igw-public"
            },
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d1532f790812fdb",
            "connectivity_type": "public",
            "id": "nat-08551f9f73d3f4c6d",
            "network_interface_id": "eni-0c69fdf1b932e0731",
            "private_ip": "10.0.1.68",
            "public_ip": "54.85.44.158",
            "subnet_id": "subnet-06149a0e188b1d97b",
            "tags": {
              "Name": "nat-gateway-us-east-1a"
            },
            "tags_all": {
              "Name": "nat-gateway-us-east-1a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:network-acl/acl-018464a6f0a871f0d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-018464a6f0a871f0d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "992293952919",
            "subnet_ids": [
              "subnet-0404a9129a61f437c",
              "subnet-09f33739b82107101"
            ],
            "tags": {
              "Name": "nacl-private"
            },
            "tags_all": {
              "Name": "nacl-private"
            },
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:network-acl/acl-0de27eb3c2d816349",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0de27eb3c2d816349",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "992293952919",
            "subnet_ids": [
              "subnet-01dce5360997b1228",
              "subnet-06149a0e188b1d97b"
            ],
            "tags": {
              "Name": "nacl-public"
            },
            "tags_all": {
              "Name": "nacl-public"
            },
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:route-table/rtb-0e0b5662cebe88530",
            "id": "rtb-0e0b5662cebe88530",
            "owner_id": "992293952919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08551f9f73d3f4c6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-us-east-1a"
            },
            "tags_all": {
              "Name": "rt-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.nat_public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:route-table/rtb-0a6f7aa8450433ea9",
            "id": "rtb-0a6f7aa8450433ea9",
            "owner_id": "992293952919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06841a50edd6b8561",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06841a50edd6b8561",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public"
            },
            "tags_all": {
              "Name": "rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c89cfab3f5d41f2",
            "route_table_id": "rtb-0e0b5662cebe88530",
            "subnet_id": "subnet-09f33739b82107101"
          },
          "dependencies": [
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.nat_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0374788d95f6dd06c",
            "route_table_id": "rtb-0e0b5662cebe88530",
            "subnet_id": "subnet-0404a9129a61f437c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.nat_public",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cfa6b86922c75fd",
            "route_table_id": "rtb-0a6f7aa8450433ea9",
            "subnet_id": "subnet-06149a0e188b1d97b"
          },
          "dependencies": [
            "module.networking.aws_route_table.rt_public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main",
            "module.networking.aws_internet_gateway.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0123cb308121f00f3",
            "route_table_id": "rtb-0a6f7aa8450433ea9",
            "subnet_id": "subnet-01dce5360997b1228"
          },
          "dependencies": [
            "module.networking.aws_route_table.rt_public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main",
            "module.networking.aws_internet_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:subnet/subnet-09f33739b82107101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-09f33739b82107101",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992293952919",
            "tags": {
              "Name": "subnet-private-us-east-1a"
            },
            "tags_all": {
              "Name": "subnet-private-us-east-1a"
            },
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:subnet/subnet-0404a9129a61f437c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-0404a9129a61f437c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992293952919",
            "tags": {
              "Name": "subnet-private-us-east-1b"
            },
            "tags_all": {
              "Name": "subnet-private-us-east-1b"
            },
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:subnet/subnet-06149a0e188b1d97b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06149a0e188b1d97b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992293952919",
            "tags": {
              "Name": "subnet-public-us-east-1a"
            },
            "tags_all": {
              "Name": "subnet-public-us-east-1a"
            },
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:subnet/subnet-01dce5360997b1228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01dce5360997b1228",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992293952919",
            "tags": {
              "Name": "subnet-public-us-east-1b"
            },
            "tags_all": {
              "Name": "subnet-public-us-east-1b"
            },
            "vpc_id": "vpc-0d78b0645766eb87b"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:vpc/vpc-0d78b0645766eb87b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-095ee95a8019866e3",
            "default_route_table_id": "rtb-0f2680519599d2141",
            "default_security_group_id": "sg-007767b42d1e2febd",
            "dhcp_options_id": "dopt-172ad96d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d78b0645766eb87b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f2680519599d2141",
            "owner_id": "992293952919",
            "tags": {
              "Name": "node-app-prod-web"
            },
            "tags_all": {
              "Name": "node-app-prod-web"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds-aurora_serverless",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.rds-aurora_serverless.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:vpc/vpc-d7d482ad",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08ad8e64",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-172ad96d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-d7d482ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-695b8617",
            "owner_id": "992293952919",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.rds-aurora_serverless",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_servers",
      "provider": "module.rds-aurora_serverless.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:security-group/sg-01d5bf1c8183d065d",
            "description": "For application servers",
            "egress": [],
            "id": "sg-01d5bf1c8183d065d",
            "ingress": [],
            "name": "app-servers",
            "name_prefix": "",
            "owner_id": "992293952919",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-d7d482ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds-aurora_serverless.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds-aurora_serverless",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_access",
      "provider": "module.rds-aurora_serverless.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3065016953",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0390bdfdc490b0223",
            "self": false,
            "source_security_group_id": "sg-01d5bf1c8183d065d",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds-aurora_serverless.aws_rds_cluster_parameter_group.aurora_cluster_postgresql10_parameter_group",
            "module.rds-aurora_serverless.aws_security_group.app_servers",
            "module.rds-aurora_serverless.data.aws_subnet_ids.all",
            "module.rds-aurora_serverless.data.aws_vpc.default",
            "module.rds-aurora_serverless.module.aurora.aws_db_subnet_group.this",
            "module.rds-aurora_serverless.module.aurora.aws_rds_cluster.this",
            "module.rds-aurora_serverless.module.aurora.aws_security_group.this",
            "module.rds-aurora_serverless.module.aurora.random_id.snapshot_identifier",
            "module.rds-aurora_serverless.module.aurora.random_password.master_password"
          ]
        }
      ]
    },
    {
      "module": "module.rds-aurora_serverless.module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.rds-aurora_serverless.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992293952919:security-group/sg-0390bdfdc490b0223",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0390bdfdc490b0223",
            "ingress": [],
            "name": "aurora-20211231012855662800000001",
            "name_prefix": "aurora-",
            "owner_id": "992293952919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-aurora"
            },
            "tags_all": {
              "Name": "aurora-aurora"
            },
            "timeouts": null,
            "vpc_id": "vpc-d7d482ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds-aurora_serverless.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}